<resources>
    <string name="app_name">Library</string>
    <string name="book_author_hint">Enter an author of the book</string>
    <string name="book_author_label">Author</string>
    <string name="book_title_hint">Enter a title of the book.</string>
    <string name="book_title_label">Title</string>
    <string name="book_details_label">Details</string>
    <string name="book_finished_label">Finished</string>
    <string name="book_review">Review</string>
    <string name="new_book">New Book</string>
    <string name="book_share">Send book details via</string>

    <string name="book_share_text">
        Title: %1$s\nAuthor: %2$s\nReading start and end dates: %3$s - %4$s
    </string>


</resources>