<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="16dp">

            <ImageView
                android:id="@+id/book_photo"
                android:layout_width="80dp"
                android:layout_height="100dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@color/black"/>

            <ImageButton
                android:id="@+id/book_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_author_label"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <EditText
                android:id="@+id/book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_author_hint"
                android:importantForAutofill="no"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_title_label"
                android:textAppearance="?attr/textAppearanceHeadline5" />

            <EditText
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/book_title_hint"
                android:importantForAutofill="no"
                android:inputType="text" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_details_label"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/book_date_read_start"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:layout_marginEnd="15dp"
            tools:text="Wed May 11 11:56 EST 2022" />

        <View
            android:id="@+id/divider"
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/book_date_read_end"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:layout_marginStart="15dp"
            tools:text="Wed May 15 17:24 EST 2022" />



    </LinearLayout>

    <CheckBox
        android:id="@+id/book_finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_finished_label" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_review"
        android:textAppearance="?attr/textAppearanceHeadline5" />

    <EditText
        android:id="@+id/book_review"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:importantForAutofill="no"/>

</LinearLayout>